# confluence-markdown-mcp

./: LICENSE  README.md  confluence_markdown_mcp.py  pyproject.toml  requirements.txt  skill.md  skill.zh-CN.md
.github/workflows/: copilot-setup-steps.yml
confluence_markdown_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  files.py  server.py  service.py
confluence_markdown_mcp/converter/: __init__.py  _iframe.py  _plantuml.py  _style.py  macros.py  md_to_storage.py  storage_to_md.py
tests/: test_client_attachments.py  test_client_auth.py  test_converter.py  test_converter_attachments.py  test_round_trip.py  test_service.py  test_service_attachments.py
